--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,24 @@ body {
 
 #editor {
   width:240px;
-  float:left;
 }
 
-#preview {
+
+
+#swipe_back {
+  position:relative;
   width:240px;
-  height: 240px;
-  background: #ccc;
-  float:left;
+  height:240px;
+}
+
+#arrowleft {
+  top: 50%;   
+  position: absolute;
+  left: 20px;
+}
+
+#arrowright {
+  top: 50%;
+  position: absolute;
+  right: 20px; 
 }
