--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ body {
   background: #ffc;
 }
 
+.canvasPages {
+  height: 400px;
+  overflow:scroll;
+}
+
 .canvasPage {
   position:relative;
   width:240px;
