--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,21 @@
 .App {
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#left {
+  float:left;
+  width:240px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#center {
+  float:left;
+  width:320px;
 }
 
-.App-intro {
-  font-size: large;
+#editor {
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#preview {
+  width:400px;
+  height:500px;
 }
+
