--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,21 @@ body {
   border: 1px solid gray;
 }
 
+.previewFrame {
+    position:fixed;
+    left:0;
+    top:0;
+    background:rgba(0,0,0,0.5);
+    width:100%;
+    height:100%;
+}
+
+.preview {
+    position:absolute;
+    left:100px;
+    top:100px;
+    width:400px;
+    height:500px;
+    background:#fff;
+}
 
