--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,18 @@ body {
   overflow:scroll;
 }
 
+.frameProperties {
+  border: 1px solid #aaa;
+  border-top: #fff;
+}
+
+.frameProperty {
+  margin-top:8px;
+  margin-left:24px;
+  margin-bottom:8px;
+  color: #777;
+}
+
 .frameCursor {
   float:left;
   background:rgba(0, 255, 0, 0.0);
