--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@ body {
   font-family: sans-serif;
 }
 
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .canvasElement {
   position:absolute;
   overflow:hidden;
