--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ body {
 }
 
 .fieldValue {
-  width: 12em;
+  width: 10em;
   float: left;
 }
 
@@ -137,6 +137,29 @@ body {
     background:#fff;
 }
 
+.segmentFrame {
+  float:left;
+  border: 1px solid #00BCD4;
+  border-radius: 4px;
+}
+
+.segmentCell {
+  float:left;
+  border-left: 1px solid #00BCD4;
+  color: #00BCD4;
+  text-align: center;
+}
+
+.segmentCellFirst {
+  float:left;
+  text-align: center;
+}
+
+.segmentCellOn {
+  background: #00BCD4;
+  color: #ffffff;
+}
+
 .sliderFrame {
   float:left;
   border: 1px solid #00BCD4;
@@ -162,3 +185,4 @@ body {
 .sliderCellOn {
   background: #00BCD4;
 }
+
