--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,7 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-.toolbar {
-  padding-top: 2px;
-  padding-bottom: 2px;
-  height:24px;
-  background: #eee;
-}
-.btn {
-  height: 22px;
-  margin-left:4px;
-  margin-right:4px;
-}
-.btnIA {
-  height: 22px;
-  margin-left:4px;
-  margin-right:4px;
-  opacity: 0.33;
-}
-
-.subToolbar {
-    height:22px;
-    background: #fff;
-    margin-bottom: 4px;
-}
-.btnSM {
-  height: 22px;
-  margin-left:4px;
-  margin-right:4px;
-}
-
-#left {
-  float:left;
-}
-
-#center {
-  float:left;
-}
 
